--- a/dev_fractals/index.html
+++ b/dev_fractals/index.html
@@ -17,6 +17,9 @@
     <script type="text/javascript" src="js/idfapp/view3d.js"></script>
     <script type="text/javascript" src="js/idfapp/scene.js"></script>
     <script type="text/javascript" src="js/idfapp/ui.js"></script>
+    <script type="text/javascript" src="js/idfapp/base-fractal.js"></script>
+    <script type="text/javascript" src="js/idfapp/fractals/l-system.js"></script>
+    
 </head>
 <body>
 <div class="cd-wrapper" id="root">
