--- a/dev_fractals/index.html
+++ b/dev_fractals/index.html
@@ -18,13 +18,9 @@
         <script type="text/javascript" src="js/idfapp/scene.js"></script>
         <script type="text/javascript" src="js/idfapp/ui.js"></script>
 
-        <script type="text/javascript" src="js/idfapp/base-fractal.js"></script>
-        <script type="text/javascript" src="js/idfapp/fractals/l-system.js"></script>
-
-
-
         <script type="text/javascript" src="js/idfapp/fractal-builder.js"></script>
         <script type="text/javascript" src="js/idfapp/fractal-builder_aln.js"></script>
+        <script type="text/javascript" src="js/idfapp/fractals/l-system.js"></script>
 
     </head>
     <body>
@@ -38,7 +34,7 @@
                 events_wrapper: 'root'
             });
 
-            app.createFractal('fractal-builder_aln', {});
+            app.createFractal('fractal-l_system', {});
         </script>
     </body>
 </html>
