--- a/dev_fractals/tests.html
+++ b/dev_fractals/tests.html
@@ -34,6 +34,9 @@ and open the template in the editor.
         <script type="text/javascript">
             new Testing.TestBuilder()
                     .addTest(new Testing.TestLSystemSimple())
+                    .addTest(new Testing.TestLSystemSimple2())
+                    .addTest(new Testing.TestLSystemSimple3())
+                    .addTest(new Testing.TestLSystemSubBranch1())
                     .run();
         </script>
     </body>
