--- a/dev_fractals/tests.html
+++ b/dev_fractals/tests.html
@@ -41,6 +41,7 @@ and open the template in the editor.
                     .addTest(new Testing.TestLSystemSubBranch2())
                     .addTest(new Testing.TestLSystemGenSimple1())
                     .addTest(new Testing.TestLSystemGenSimple2())
+                    .addTest(new Testing.TestLSystemGenComplex1())
                     .run();
         </script>
     </body>
