--- a/dev_fractals/tests.html
+++ b/dev_fractals/tests.html
@@ -28,13 +28,15 @@ and open the template in the editor.
         <!-- Tests -->
         <script type="text/javascript" src="js/testing/tests/tests.generic.js"></script>
         <script type="text/javascript" src="js/testing/tests/tests.l-system.js"></script>
+        <script type="text/javascript" src="js/testing/tests/tests.performance.js"></script>
 
     </head>
     <body>
         <div id="qunit"></div>
+        <div id="perf"></div>
 
         <script type="text/javascript">
-            new Testing.TestBuilder()
+            new Testing.TestBuilder(document.getElementById("perf"))
                     .addTest(new Testing.TestUtilsIsZero1())
                     .addTest(new Testing.TestUtilsIsZero2())
                     .addTest(new Testing.TestUtilsIsZero3())
@@ -53,6 +55,8 @@ and open the template in the editor.
                     .addTest(new Testing.TestLSystemGenSimple1())
                     .addTest(new Testing.TestLSystemGenSimple2())
                     .addTest(new Testing.TestLSystemGenComplex1())
+                    .addTest(new Testing.TestTreeGenerationPerf1(1000))
+                    .addTest(new Testing.TestMeshGenerationPerf1(100))
                     .run();
         </script>
     </body>
