WebGL wrapper added primitive element types

--- a/dev_webglwrap/index.html
+++ b/dev_webglwrap/index.html
@@ -44,7 +44,7 @@
 					 1,  1, -1,
 					 1,  1,  1
 				]));
-				geometry.indices = new Uint16Array([
+				/*geometry.elements.triangles.indices = new Uint16Array([
 					0, 1, 2,
 					2, 1, 3,
 					4, 5, 6,
@@ -57,6 +57,11 @@
 					4, 2, 6,
 					1, 3, 5,
 					5, 3, 7
+				]);*/
+				geometry.elements.lines.indices = new Uint16Array([
+					0, 1, 2, 3, 4, 5, 6, 7,
+					0, 2, 1, 3, 4, 6, 5, 7,
+					0, 4, 1, 5, 2, 6, 3, 7
 				]);
 				
 				mesh = new GLW.Mesh(geometry, material);
