--- a/dev/index.html
+++ b/dev/index.html
@@ -28,6 +28,7 @@ and open the template in the editor.
         <!-- Fractals -->
         <script type="text/javascript" src="js/idfapp.js"></script>
         <script type="text/javascript" src="js/idfapp/view3d.js"></script>
+        <script type="text/javascript" src="js/idfapp/controls.js"></script>
         <script type="text/javascript" src="js/idfapp/core.js"></script>
         <script type="text/javascript" src="js/idfapp/scene.js"></script>
         <script type="text/javascript" src="js/idfapp/line-mesh.js"></script>
